err/flask-keen.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Crypto'...
Listing './lib/python3.5/site-packages/Crypto/Cipher'...
Listing './lib/python3.5/site-packages/Crypto/Hash'...
Listing './lib/python3.5/site-packages/Crypto/IO'...
Listing './lib/python3.5/site-packages/Crypto/Math'...
Listing './lib/python3.5/site-packages/Crypto/Protocol'...
Listing './lib/python3.5/site-packages/Crypto/PublicKey'...
Listing './lib/python3.5/site-packages/Crypto/Random'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher/test_vectors/AES'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher/test_vectors/TDES'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/BLAKE2b'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/BLAKE2s'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/SHA3'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/keccak'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/IO'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Math'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Protocol'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/PublicKey'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/PublicKey/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/PublicKey/test_vectors/ECC'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Random'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/DSA'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/ECDSA'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/PKCS1-PSS'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/PKCS1-v1.5'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Util'...
Listing './lib/python3.5/site-packages/Crypto/Signature'...
Listing './lib/python3.5/site-packages/Crypto/Util'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Keen-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/keen'...
Listing './lib/python3.5/site-packages/keen-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycryptodome-3.4.7.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.10.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
